# Polytech

./: .gitignore  CMakeLists.txt  resources.qrc
CustomTitleBar/: CMakeLists.txt
CustomTitleBar/widgets/buttons/: CustomButton.h
CustomTitleBar/widgets/other/: TitleBarProperties.h  WindowEffect.cpp  WindowEffect.h
CustomTitleBar/widgets/titleBars/: DarkLightTitleBar.cpp  DarkLightTitleBar.h  SimpleTitleBar.cpp  SimpleTitleBar.h  TitleBar.cpp  TitleBar.h
CustomTitleBar/widgets/windowClasses/: FramelessWindow.cpp  FramelessWindow.h
CustomTitleBar/widgets/windows/: CustomWindow.cpp  CustomWindow.h  DarkLightWindow.cpp  DarkLightWindow.h
Program/: CMakeLists.txt  main.cpp
Program/resources/styles/: dark.qss  light.qss
Program/widgets/buttons/: CustomButton.cpp  CustomButton.h  StyledButton.cpp  StyledButton.h
Program/widgets/containers/: WelcomeContainer.cpp  WelcomeContainer.h  WorkArea.cpp  WorkArea.h  Workspace.cpp  Workspace.h
Program/widgets/other/: Image.cpp  Image.h  StyleSheetsHelper.h
Program/widgets/windows/: MainWindow.cpp  MainWindow.h
resources/styles/: dark.qss  light.qss
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  resources.qrc
src/widgets/other/: StyleSheetsHelper.h
